--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "name": "ade-lms",
   "version": "1.0.0",
-  "description": "ADE Learning Management System back-end",
+  "description": "ADE Patient Story System back-end",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SparrowAcst/ade-lms.git"
+    "url": "git+https://github.com/SparrowAcst/ade-patient-story.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/SparrowAcst/ade-lms/issues"
+    "url": "https://github.com/SparrowAcst/ade-patient-story/issues"
   },
-  "homepage": "https://github.com/SparrowAcst/ade-lms#readme",
+  "homepage": "https://github.com/SparrowAcst/ade-patient-story#readme",
   "dependencies": {
     "axios": "^1.3.4",
     "busboy": "^1.6.0",
@@ -27,7 +27,10 @@
     "googleapis": "^114.0.0",
     "js-yaml": "^4.1.0",
     "jsondiffpatch": "^0.4.1",
+    "langs": "^2.0.0",
+    "languagedetect": "^2.0.0",
     "lodash": "^4.17.21",
+    "mammoth": "^1.6.0",
     "moment": "^2.29.4",
     "mongodb": "^4.13.0",
     "nanomatch": "^1.2.13",
